--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -5,7 +5,7 @@ name: Lighthouse Audit
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   lighthouse:
@@ -19,13 +19,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 16
-          
 
       - name: Install dependencies
         run: npm install
 
       - name: Run Lighthouse
         run: npm run lhci
-        
+
       - name: Display Lighthouse report
         run: npx lhci upload
