--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "lhci": "lhci autorun --url=http://localhost:3000/api/data --numberOfRuns=1",
+    "lhci": "lhci autorun --url=http://localhost:3000/api/data --numberOfRuns=1 --disableDeviceEmulation",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
